style(ReportModal.module.scss): add !important to gap property to ensure consistent spacing in checkbox label

--- a/src/components/user_content/use_report_content/ReportModal.module.scss
+++ b/src/components/user_content/use_report_content/ReportModal.module.scss
@@ -105,5 +105,5 @@
 .checkboxLabel {
     display: inline-flex; 
     align-items: flex-start; 
-	gap: spacing.$spacer-sm; 
+	gap: spacing.$spacer-sm !important; 
 }
